--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,12 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            {% for my_page in site.pages %}
+            <li><a href="contact.html">Contact Us</a></li>
+            <!--{% for my_page in site.pages %}
             {% if my_page.title %}
             <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
             {% endif %}
-            {% endfor %}
+            {% endfor %}-->
             <!--<li><a href="#">Sign Up</a></li>
             <li><a href="#">Log In</a></li>
             <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}"
